Temporary fix to prevent chat overflow behind message bar

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -1,3 +1,7 @@
+#liveChat{
+padding-bottom: 50px;
+}
+
 .post-current {
     border-left: 6px solid #636ee7;
 }
